fix: incorrect image on mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -16,8 +16,6 @@
     background: url("../assets/profile.png");
     background-size: cover;
     background-position: center;
-    /* border-radius: 449px; */
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
     box-shadow: 0px 4px 15px -2px #0f4878 inset,
       0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     max-width: 400px;
@@ -135,11 +133,8 @@
 
     background: var(--bg-primary);
     .image {
-      background: url("https://images.unsplash.com/photo-1522556189639-b150ed9c4330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80");
       background-size: cover;
       background-position: center;
-      /* border-radius: 449px; */
-      /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
       box-shadow: 0px 4px 15px -2px #0f4878 inset,
         0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       width: 80vw;
